Region Image Added - Allan Session

--- a/NoMo/NoMo/NoMo.Android/NoMo.Android.csproj
+++ b/NoMo/NoMo/NoMo.Android/NoMo.Android.csproj
@@ -85,14 +85,15 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\drawable\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\NoMo\NoMo.csproj">
       <Project>{A68FABD8-7289-45DB-834D-1178DE1697AA}</Project>
       <Name>NoMo</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\capepeninsula.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
