--- a/NoMo/NoMo/NoMo.Android/NoMo.Android.csproj
+++ b/NoMo/NoMo/NoMo.Android/NoMo.Android.csproj
@@ -101,6 +101,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\splash_screen.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\logo.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
