--- a/NoMo/NoMo/NoMo.Android/NoMo.Android.csproj
+++ b/NoMo/NoMo/NoMo.Android/NoMo.Android.csproj
@@ -116,6 +116,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\westcoast.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\hamburgermenu.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
