--- a/NoMo/NoMo/NoMo.Android/Properties/AndroidManifest.xml
+++ b/NoMo/NoMo/NoMo.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.nomo">
-	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.nomo" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="25" />
 	<application android:label="NoMo.Android" android:theme="@style/MainTheme"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.ACCEPT_HANDOVER" />
 </manifest>
