--- a/NoMo/NoMo/NoMo.Android/NoMo.Android.csproj
+++ b/NoMo/NoMo/NoMo.Android/NoMo.Android.csproj
@@ -123,6 +123,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\hamburgermenu.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\xml\network_security_config.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
