--- a/NoMo/NoMo/NoMo.Android/Properties/AndroidManifest.xml
+++ b/NoMo/NoMo/NoMo.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.nomo" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="16" android:targetSdkVersion="28" />
-	<application android:label="NoMo.Android" android:theme="@style/MainTheme"></application>
+	<application android:networkSecurityConfig="@xml/network_security_config" android:label="NoMo.Android" android:theme="@style/MainTheme"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
