--- a/NoMo/NoMo/NoMo/NoMo.csproj
+++ b/NoMo/NoMo/NoMo/NoMo.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -52,6 +52,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="obj\" />
     <Folder Include="Services\Interfaces\" />
   </ItemGroup>
 </Project>
